--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe 生成活动文件",
-            "command": "E:\\mingw\\bin\\g++.exe",
+            "command": "D:\\Program\\mingw\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
